--- a/style/main.css
+++ b/style/main.css
@@ -90,7 +90,7 @@ a.work-title{
 
 /* General */
 body, html, .content-view{
-    background-color: #FAFAFA;
+    background-color:#FAFAFA;
 }
 body{
     width: 100%;
@@ -289,4 +289,8 @@ tr.skill-set > td {
 .car{
     position: relative;
     top: -6px;
+}
+#feed
+{
+    float: right;
 }
