--- a/style/main.css
+++ b/style/main.css
@@ -1,8 +1,10 @@
-.destroy
+input
 {
-    position: absolute;
-    cursor: pointer;
-    width: 30px;
-    height: 30px;
-    background: url(../img/ds1.png) no-repeat 0 0;
+    text-align: center;
+}
+.list-group-item
+{
+    font-size: 25px;
+    color: #333333;
+    font-family: sans-serif;
 }
